# prism.oshi.tw

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  admin-ui-spec.md  crystal-ui-design.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vod-export-artist-candidates.md  vod-export-data-issues.md  vod-export-data-warnings.md  vod-export-spec.md
.design-sync/: NOTES.md  config.json  conventions.md  gen-entry.mjs  preview-harness.tsx  tsconfig.sync.json
.github/: dependabot.yml
admin/: .gitignore  cleanup-duplicates.sql  cleanup-nagi-inori-vod.sql  find-duplicates.sql  package-lock.json  package.json  schema.sql  seed.ts  tsconfig.json  worker-configuration.d.ts  wrangler.toml
app/: globals.css  layout.tsx  page.tsx
data/: .sync-state.json  registry.json
docs/: vod-export-consumer-guide.md  vod-export-rollout.md
lib/: data.ts  parse.ts  (+10 more)
tools/prismlens/: cache.db  pyproject.toml
tools/prismlens/src/prismlens/: __init__.py  __main__.py  cache.py  cli.py  config.py  db_client.py  discovery.py  export.py  extraction.py  fill_artists.py  importer.py  metadata.py  review_ops.py  stamp.py  tui.py
tools/prismlens/src/prismlens/stamp_static/: stamp.css  stamp.js
tools/prismlens/src/prismlens/stamp_templates/: index.html
tools/prismlens/tests/: test_cache.py  test_cli.py  test_config.py  test_db_client.py  test_discovery.py  test_eximport.py  test_export.py  test_extraction.py  test_fill_artists.py  test_importer.py  test_metadata.py  test_review_ops.py  test_stamp.py  test_tui.py
(+351 files in other folders)
