[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismlens"
version = "0.1.0"
description = "Upstream data collection pipeline for Prism — scrapes YouTube livestream archives for song timestamp data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapetube>=2.5.1",
    "youtube-comment-downloader>=0.1.68",
    "yt-dlp>=2024.1.0",
    "click>=8.1.7",
    "flask>=3.0",
    "rich>=13.7.0",
    "textual>=0.52.1",
    "tomli>=2.0.1; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
prismlens = "prismlens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
prismlens = ["stamp_templates/*.html", "stamp_static/*.css", "stamp_static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
